# boost.asio_learn

./: CMakeLists.txt  Client_denis.cpp  README.md  Server.cpp  Server_denis.cpp  http_client_sync_ssl.cpp  http_server_sync_ssl.cpp  simple_server_asio.cpp  stream_test.cpp
async/: CMakeLists.txt
chapter_client_server_impliment/: CMakeLists.txt  exampl_async_client_TCP.cpp  exampl_sunc_client_UPD.cpp
client_sync_writing_to_TCP/: CMakeLists.txt  server.cpp  sync_readFromSocket.cpp  sync_writing_to_TCP.cpp
example/file_load_upload/: CMakeLists.txt
example/file_load_upload/HttpsClient/: CMakeLists.txt  HttpsClient.cpp  HttpsClient.hpp  mainClient.cpp
example/file_load_upload/HttpsServer/: CMakeLists.txt  HttpsServer.cpp  HttpsServer.hpp  mainServer.cpp  server01.crt
example/simple_sync_client_https/HttpsClient/: HttpsClient.cpp
example_asio/: CMakeLists.txt
example_asio/async/: asinc_client_read.cpp  asinc_client_write.cpp
example_asio/chapter_client_server_impliment/: CMakeLists.txt  exampl_async_client_TCP.cpp  exampl_async_server_TCP.cpp  exampl_sync_client_TCP.cpp
example_asio/client_sync_writing_to_TCP/: server.cpp  sync_write_some_to_TCP.cpp
example_asio/echo_clietn_server_ssl/: CMakeLists.txt
example_asio/echo_clietn_server_ssl/echo_client/: CMakeLists.txt  HttpsClient.cpp  HttpsClient.hpp  mainClientDebug.cpp
example_asio/echo_clietn_server_ssl/echo_server/: CMakeLists.txt  HttpsServer.cpp  HttpsServer.hpp  mainServerDebug.cpp
example_asio/file_load_upload/HttpsClient/: HttpsClient.cpp  HttpsClient.hpp
example_asio/file_load_upload/HttpsServer/: CMakeLists.txt  dh2048.pem  server01.key
example_asio/simple_sync_client_https/HttpsClient/: CMakeLists.txt  HttpsClient.hpp  README.md  mainClientDebug.cpp  rootca.crt
example_json/simple_example/: CMakeLists.txt  parse.cpp
example_ssl_cert_generation/: createCertificate.sh  rootca.crt  rootca.key  rootca.srl  server01.crt  server01.csr  server01.key
example_unix_socket/: simple_unix_server.cpp
libs/: CMakeLists.txt
libs/boost/: CMakeLists.txt  Makefile  beast_json.cpp  beast_json.hpp  cmake_install.cmake
libs/boost/boost/test_build/: CMakeCache.txt
libs/boost/boost/test_build/test/beast/: tests-beast
